Neue Vorlesung hinzugefügt
Fehler die mir so direkt aufgefallen sind, sind mit TODO gekennzeichnet

--- a/Vorlesungen/vl_11.tex
+++ b/Vorlesungen/vl_11.tex
@@ -223,7 +223,7 @@
 			\int_a^b \dd{x} : \mathcal{R}_{[a,b]} \rightarrow  & \mathbb{R} \\
 			f \mapsto & \int_a^b f\dd{x}
 		\end{align*}
-		ein lineares Funktionsglied\todo{Das Wort ist glaube ich falsch. Lineares Funktional könnte stimmen} ist
+		ein lineares Funktional ist
 		\item Eigenschaft 2 sagt, dass dieses Funktional positiv ist
 		(also nicht-negative Funktionen einen nicht negativen Wert zuordnet)
 		\item Eigenschaft 4 impliziert eine gewisse stetigkeit
