--- a/Vorlesungen/vl_12.tex
+++ b/Vorlesungen/vl_12.tex
@@ -172,9 +172,9 @@
 		\int_a^b \ln (x) \dd{x} \text{ wobei } 0 \not\in [a,b] \\
 		\int 1 \cdot \ln (x) \dd{x} = & x \ln (x)\vert_a^b - 
 		\int_a^b x \cdot \frac{1}{x} \dd{x} \\
-		= & \left. \ln (x) \right\vert_a^b - \int_a^b 1 \dd{x} \\
-		= & \left. \ln (x)\right\vert_a^b - \left. x\right\vert_a^b \\
-		= & \left. \ln (x)\right\vert_a^b - (b - a)
+		= & \left. x \cdot \ln (x) \right\vert_a^b - \int_a^b 1 \dd{x} \\
+		= & \left. x \cdot \ln (x)\right\vert_a^b - \left. x\right\vert_a^b \\
+		= & \left. x \cdot \ln (x)\right\vert_a^b - (b - a)
 	\end{align*}
 }\end{Beispiel}
 
@@ -267,3 +267,4 @@
 		= \left. \frac{1}{2} \ln \frac{1+x}{1-x}\right\vert_a^b
 	\end{align*}	
 \end{Beispiel}
+
