Fehler bei int cos^2 korrigiert

--- a/Vorlesungen/vl_12.tex
+++ b/Vorlesungen/vl_12.tex
@@ -164,8 +164,9 @@
 		= & \left. cos(x) \cdot sin(x) \right\vert_a^b + \int_a^b 1 - cos^2(x) \dd{x} \\
 		= &  \left. cos(x) \cdot sin(x) \right\vert_a^b + \int_a^b 1 \dd{x} - \int_a^b cos^2(x) 
 		\dd{x} \\
+		= &  \frac{1}{2} \cdot \left. \left( cos(x) \cdot sin(x) + x\right) \right\vert_a^b \\
 		\text{Ergo: } \int_a^b cos^2(x) \dd{x} = & \frac{1}{2} (cos(x) sin(x) 
-		\vert_a^b - (b-a))
+		\vert_a^b + (b-a))
 	\end{align*}
 	
 	\begin{align*}
