--- a/gesamt.tex
+++ b/gesamt.tex
@@ -64,6 +64,7 @@
 % \riemann{1}{2} = \mathcal{R}_{[a,b]}
 
 \begin{document}
+\tableofcontents
 \include{Vorlesungen/vl_04}
 \include{Vorlesungen/vl_05}
 \include{Vorlesungen/vl_06}
